--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'androidx.core:core:1.0.2'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    //implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
