--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     //implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.jakewharton:butterknife:8.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
 }
